--- a/index.html
+++ b/index.html
@@ -44,5 +44,23 @@
             </div>
         </div>
     </div>
+
+    <div class="seckill-show-cover">
+        <div class="layer seckill-show clearfix">
+            <div class="seckill-items seckill-time">1</div>
+            <div class="seckill-items">2</div>
+            <div class="seckill-items">3</div>
+            <div class="seckill-items">4</div>
+            <div class="seckill-items">5</div>
+            <div class="seckill-items seckill-slider">6</div>
+        </div>
+    </div>
+
+    <div class="sale-show-cover">
+        <div class="layer sale-show clearfix">
+            <div class="daliy-sale floatLeft">1</div>
+            <div class="brand-sale floatLeft">2</div>
+        </div>
+    </div>
 </body>
 </html>
