changed flex layer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </div>
 
+
     <div class="main-show-cover">
         <div class="layer main-show clearfix">
             <div class="nav-menu"></div>
@@ -60,6 +61,13 @@
         <div class="layer sale-show clearfix">
             <div class="daliy-sale floatLeft">1</div>
             <div class="brand-sale floatLeft">2</div>
+        </div>
+    </div>
+
+    <div class="find-commodity-cover">
+        <div class="layer find-commodity clearfix">
+            <div class="find-search"></div>
+            <div class="find-slider"></div>
         </div>
     </div>
 </body>
