--- a/index.html
+++ b/index.html
@@ -70,5 +70,14 @@
             <div class="find-slider"></div>
         </div>
     </div>
+
+    <div class="shop-nav-cover">
+        <div class="layer shop-nav clearfix">
+            <div class="nav-items news">新品首发</div>
+            <div class="nav-items top">排行榜</div>
+            <div class="nav-items goods">逛好店</div>
+            <div class="nav-items ticket">领券</div>
+        </div>
+    </div>
 </body>
 </html>
