--- a/index.html
+++ b/index.html
@@ -79,5 +79,28 @@
             <div class="nav-items ticket">领券</div>
         </div>
     </div>
+
+    <div class="channels-cover">
+        <div class="layer channels clearfix">
+            <div class="clothes style1 items1"></div>
+            <div class="book style1 items2"></div>
+            <div class="style2 items3"></div>
+            <div class="style2 items4"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+            <div class="style2"></div>
+        </div>
+    </div>
 </body>
 </html>
